--- a/package.json
+++ b/package.json
@@ -9,10 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~4.1.5",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-firebase/app": "^18.3.0",
+    "@react-native-firebase/auth": "^18.3.0",
+    "@react-native-google-signin/google-signin": "^10.0.1",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.9",
+    "expo-dev-client": "~2.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.8",
+    "react-native-alert-notification": "^0.3.4",
+    "react-native-animated-loader": "^1.0.0",
+    "react-native-indicators": "^0.17.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
